# POO

./: .gitignore  CMakeLists.txt  alumno.cpp  alumno.h  main.cpp
ArchivosBinarios/: Escritura.cpp  EscrituraDinamico.cpp  EscrituraEstatico.cpp  EscrituraUsandoArrayDinamico.cpp  FuncionGuardarVectorClase.h  Lectura.cpp  LecturaDinamico.cpp  LeerArchivoBinario.h  TestFuncionGuardar.cpp  TestFuncionLeer.cpp  TestFunciones.cpp
CString/: TomiString.cpp  TomiString.h
EXAMENES/Parcial 1 RESUELTOS/ParcialAuxx/: CMakeLists.txt  main.cpp  prodinternacional.h
Finales/Final Alumnos free, medio y premium/: Res.cpp
POO/: CMakeLists.txt
Parcial 1 RESUELTOS/Mi parcial/: Resolucion2.cpp
Parcial 1 RESUELTOS/ParcialAuxx/: gestorparcialaux.h  prodNacional.cpp  prodinternacional.cpp  productocompuesto.h
Parcial 1 RESUELTOS/UADER Software Alumnado 5 nov 2023/: Res.cpp
Parcial 2 RESUELTOS/Parcial - Sistema que permite saber si un alumno aprobo/: Resolucion.cpp  Resolucion.h
Parcial 2 RESUELTOS/Parcial 2019/: Resolucion.cpp  Resolucion2MEJOR.cpp
Parcial 2 RESUELTOS/Parcial 2022/: Resolucion.cpp  Test.cpp
Parcial14.08.2023/: Parcial Consigna1.cpp
ParcialAux/: gestorparcialaux.cpp  gestorparcialaux.h  prodNacional.cpp  prodNacional.h  prodinternacional.cpp  prodinternacional.h  productocompuesto.cpp  productocompuesto.h
ParcialAuxx/: gestorparcialaux.cpp  prodNacional.h  productocompuesto.cpp
ParcialPRODUCTOS/: productoextranjero.cpp  productoextranjero.h  productonacional.cpp  productonacional.h  productooferta.h  productos.cpp  productos.h
Vector Dinamico/: AmpliarVector.cpp  Explicacion sencilla de como usar un.txt  Vector.cpp  Vector.h  exp.cpp  test.cpp
templates/: listade.cpp  listade.h  pila.cpp  pila.h  pilaGenerica.cpp  pilapunteros.cpp  pilapunteros.h
(+15 files in other folders)
